@@ -7,6 +7,33 @@
     xmlns="http://vimperator.org/namespaces/liberator"
     xmlns:html="http://www.w3.org/1999/xhtml">
 
+<item replace="'go'">
+ <tags>'go' 'guioptions'</tags>
+ <spec>'guioptions' 'go'</spec>
+ <type>charlist</type>
+ <default>Tbr</default>
+ <description>
+ <p>Show or hide certain GUI elements like the menu or toolbar.</p>
+
+ <p>Supported characters:</p>
+
+ <dl>
+ <dt>m</dt> <dd>Menubar</dd>
+ <dt>T</dt> <dd>Toolbar</dd>
+ <dt>B</dt> <dd>Bookmark bar</dd>
+ <dt>A</dt> <dd>Add-on bar</dd>
+ <dt>n</dt> <dd>Tab number</dd>
+ <dt>b</dt> <dd>Bottom scrollbar</dd>
+ <dt>r</dt> <dd>Right scrollbar</dd>
+ <dt>l</dt> <dd>Left scrollbar (<em>l</em> and <em>r</em> are mutually exclusive)</dd>
+ </dl>
+
+ <p>You can also hide the tab bar with <ex>:set showtabline=0</ex>.</p>
+
+ <note>Scrollbar changes require a page reload to take effect.</note>
+ </description>
+</item>
+
 <!--item insertbefore=":set">
     <tags>:seg :way</tags>
     <spec>:se[a]</spec>
